Swagger demo is done.
