# resources/lang/en/message.php
@@ -1,0 +1,7 @@
+<?php
+
+return [
+    'columnNotfound' => 'Sort By Value is Invalid.',
+    'sortByFormatNotvalid' => 'Your Order by value is invalid'
+
+];
